--- a/calendar_of_activities/templates/index2.html
+++ b/calendar_of_activities/templates/index2.html
@@ -70,6 +70,16 @@
             <th>Date</th>
         </tr>
         <tr>
+           
+          <td>EDSA People Power Revolution Anniversary</td>
+          <td>Feb 25</td>
+      </tr>
+              <tr>
+            
+            <td>Araw ng Kagitingan</td>
+            <td>April 9</td>
+        </tr>
+        <tr>
             
             <td>All Saints' Day</td>
             <td>November 1</td>
@@ -82,28 +92,20 @@
         <tr>
             
             <td>Feast of the Immaculate Conception of Mary</td>
-            <td>12/8</td>
+            <td>Dec 8</td>
         </tr>
         <tr>
             
             <td>Christmas Day</td>
-            <td>12/25</td>
+            <td>Dec 25</td>
         </tr>
         <tr>
             
             <td>Rizal Day</td>
-            <td>12/30</td>
+            <td>Dec 30</td>
         </tr>
-        <tr>
-           
-            <td>EDSA People Power Revolution Anniversary</td>
-            <td>2/25</td>
-        </tr>
-        <tr>
-            
-            <td>Araw ng Kagitingan</td>
-            <td>4/9</td>
-        </tr>
+
+
 
                 </tr>
     </table>
@@ -119,12 +121,7 @@
 
 <style type="text/css">
 
-body{
 
-
-
-  
-}
 #center{
   padding-top: 10px;
   align-items: center;
