--- a/main/templates/main/course.html
+++ b/main/templates/main/course.html
@@ -61,13 +61,13 @@
    
          </div>
          <div class="d-grid gap-2 justify-content-center">
-           <center> <button class="btn btn-primary" type="button">View Module</button></center>
+           <center> <a class="btn btn-primary" href="{% url 'CourseModules_student' course.code %}" type="button">View Module</a></center>
           </div>
        </div>
    
       <div>
    </div>
-   
+
       <!-- course name ends -->
       <!-- announcement section starts -->
       <div class="rounded p-3 m-3 shadow border border-top-0 border-end-0 border-bottom-0 border-primary border-5">
