--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -65,14 +65,14 @@
 
                 <p>San Juan Elementary School Login credentials format:
                 <br>
-                ID [2000 . last five digits of your ID Number]
+                LRN Provided by your teachers
                 <br>
                 Password: Last name + birthdate (YYYYMMDD)
               </p>
 
                 <p>Sample:
                 <br>
-                ID:20010121
+                LRN:20010121
                 <br>
                 Password:Sanjuan20010121
                 </p>
@@ -83,7 +83,7 @@
 
 
               
-              <img class='img-responsive' src="{% static '/images/icon/FAQ_LOG_IN_.png' %}" class="img-fluid" alt="Not Available">
+              <img class='img-responsive' src="{% static '/images/icon/FAQ_LOG_IN.png' %}" class="img-fluid" alt="Not Available">
 
 
 
@@ -164,7 +164,7 @@
                 <!-- Answer -->
                 <div id="demo-gen-faq6" class="panel-collapse collapse">
                   <div class="pad-all">
-                    You can manually enroll students via People picker or provide them with the course access code for self-enrollment.
+                    Contact Administration for assistance. if you have permission to edit can manually enroll students.
                 </div>
               </div>
 
