--- a/templates/forget_password.html
+++ b/templates/forget_password.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+<meta name="referrer" content="origin">
    <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,24 +18,17 @@
       <div class="container">
       <div style="min-height:85vh" class="row justify-content-center align-items-center">
          <div class="col-lg-5 col-sm-12 p-5 rounded shadow">
-            <form action="{% url 'changePasswordFaculty' %}" method="post">
-               {% csrf_token %}
                <div class="text-center">
                   <h5 class="mb-3 fw-bold">Notify Admin for Password Change</h5>
-                  {% if messages %}
-
-                  {% for message in messages %}
-               
-               <div class="alert alert-info">
-                  {{ message }}
-              </div>
-              {% endfor %}
-              {% endif %}
               </div>
               <form action="https://formsubmit.co/0bc2e3317b95abd149bfd06eb4b77fe1" method="POST" >
                <div class="mb-3">
                   <label class="form-label ">LRN or ID</label>
-                  <input type="Message" class="form-control" name="LRN" placeholder="Full Name"  required>
+                  <input type="Text" class="form-control"  name="LRN" placeholder="LRN" required>
+               </div>
+               <div class="mb-3">
+                  <label class="form-label ">Full Name</label>
+                  <input type="Message" class="form-control"  name="Name" placeholder="Full Name"  required>
                </div>
                <div class="mb-3">
                   <label class="form-label ">I am a</label>
@@ -44,7 +38,7 @@
                    </select>
                </div>
                
-               Ang iyong password ay Last name + Birthday.<br> Halimbawa: Bonifacio2311
+               Ilagay ang LRN, kung hindi alam ilagay lamang full name at pumili kung saan ka napapabilang<br> 
                <br><br>
                <div class="d-grid">
                   <button type="submit" class="btn btn-primary">Send Request</button>
