--- a/main/templates/main/facultyCourses.html
+++ b/main/templates/main/facultyCourses.html
@@ -17,49 +17,9 @@
 
 <div class="content-body">
 
-   <div class="container ">
-      <div class="card">
-         <ol class="breadcrumb p-3">
-            <li class="breadcrumb-item fw-bold"><a class="breadcrumb-item active" aria-current="page">School Overview </a>
-            </li>
-         </ol>
 
-          <div class="card-body">
-              <div class="row">
-                  <div class="col-md-4">
-                      <a class="text-decoration-none text-primary" >
-                          <div class="card my-card bg-light shadow-sm text-center p-3">
-                           <i class="fas fa-users"></i> <h4> All Student </h4>
-                              <h3> {{studentCount}} 
-                                   
-                                  
-                                   
-                                   
-                              </h3>
-                          </div>
-                      </a>
-                  </div>
-                  <div class="col-md-4">
-                      <a class="text-decoration-none text-primary" >
-                          <div class="card my-card bg-light shadow-sm text-center p-3">
-                           <i class="fas fa-pen"> </i><h4> All Assignment </h4>
-                              <h3>{{ assignment_count}} </h3>
-                          </div>
-                      </a>
-                  </div>
-                  <div class="col-md-4">
-                      <a class="text-decoration-none text-primary">
-                          <div class="card my-card bg-light shadow-sm text-center p-3">
-                           <i class="fas fa-book"></i> <h4>Subject Available</h4>
-                              <h3>{{courses.count}} </h3>
-                          </div>
-                      </a>
-                  </div>
-              </div>
-          </div>
-      </div>
 
-                    
+   <div>           
 <div>
    <!-- navigation links -->
    <div class="container shadow-sm p-3 mb-5 bg-body rounded border border-5 ">
