--- a/main/templates/main/faculty_course.html
+++ b/main/templates/main/faculty_course.html
@@ -72,8 +72,8 @@
 
       </div>
       <div class="d-grid gap-2">
-         <button class="btn btn-primary" type="button">View Module</button>
-        
+         <a  class="btn btn-primary" href="{% url 'CourseModules' course.code %}" type="button">View Module</a>
+         
        </div>
     </div>
 
@@ -85,8 +85,7 @@
       <div class="animate__animated animate__zoomInDown d-flex justify-content-between border-bottom border-1 mb-2">
          <h5 class="fw-bold" style="color: rgb(10, 10, 48);"><i class="fas fa-bullhorn fa-lg"></i><span style="margin-right: 0.6rem;"></span>Announcement
          </h5>
-         <a
-            href="{% url 'addAnnouncement' course.code  %}"><i class="fas fa-plus">  Add</i></a>
+         <a href="{% url 'addAnnouncement' course.code  %}"><i class="fas fa-plus">  Add</i></a>
       </div>
       <div>
          {% for announcement in announcements %}
