--- a/main/templates/main/update-assignment.html
+++ b/main/templates/main/update-assignment.html
@@ -40,7 +40,7 @@
                         <div class="mb-3">
                            {{ field.label_tag }}
                            {{ field }}
-                           <span style="color:red">{{ field.errors }}</span>
+                           <span style="color:green">{{ field.errors }}</span>
                         </div>
                         {% endfor %}
                         <p class="fw-bold" id="fileError"></p>
