--- a/quiz/templates/quiz/addQuestion.html
+++ b/quiz/templates/quiz/addQuestion.html
@@ -43,64 +43,47 @@
 </div>
 {% comment %} navigation links end  {% endcomment %}
 
-<div class="container shadow-sm rounded p-4 animate__animated animate__zoomInLeft" style="max-width: 768px;">
-   <p class="text-start">Add Question for <span class="fw-bold">"{{quiz.title}}"</span></p>
+
+   
    <form action=" {% url 'addQuestion' course.code quiz.id %} " method="post">
       {% csrf_token %}
       <div class="mb-3 row">
-         <label for="textarea" class="col-sm-2 col-form-label fw-bold">Question {{quiz.question_sl}}</label>
-         <div class="col-sm-10">
-            <textarea class="form-control" id="textarea" style="height: 100px;" name="question" required></textarea>
+         
+         <div class="container">
+            <div class="row justify-content-center">
+               <label for="textarea" class="col-sm-2 col-form-label fw-bold">Question {{quiz.question_sl}}</label>
+               
+               <div class="col-sm-12 col-lg-8 shadow-lg rounded p-4">
+                  <p class="text-start">Add Question for <span class="fw-bold">"{{quiz.title}}"</span></p>
+                        
+                           <div class="fw-bold text-start mb-3">Update Quiz</div>
+                           <div class="form-group">
+                             <form action="" method="POST" enctype="multipart/form-data">
+                                 {% csrf_token %}
+                                 {% for field in form %}
+                                 <div class="mb-3">
+                                    {{ field.label_tag }}
+                                    {{ field }}
+                                    <span style="color: green">{{ field.errors }}</span>
+                                 </div>
+                                 
+                                 {% endfor %}
+                                 
+                                 <p class="fw-bold" id="fileError"></p>
+                                 <!-- submit button -->
+                                 <div class="d-flex justify-content-end bg-light border p-2 rounded">
+       
+                                    <a class="btn btn-sm btn-outline-danger mx-2" href="{% url 'faculty' course.code %}">Cancel</a>
+                                    <button name="saveOnly" class="btn btn-sm btn-primary px-3 mx-2" type="submit">Save</button>
+                                    <button class="btn btn-sm btn-primary" type="submit" id="submit"> <span class="mx-2">Save and Add another</span></button>
+                                 </div>
+                              </form>
+                           </div>
+                        
+               </div>
+            </div>
          </div>
-      </div>
-      <div class="mb-3 row">
-         <label for="option" class="col-sm-2 col-form-label fw-bold">Option A</label>
-         <div class="col-sm-10">
-            <input type="text" class="form-control" id="option" name="option1" required>
          </div>
-      </div>
-      <div class="mb-3 row">
-         <label for="option" class="col-sm-2 col-form-label fw-bold">Option B</label>
-         <div class="col-sm-10">
-            <input type="text" class="form-control" id="option" name="option2" required>
-         </div>
-      </div>
-      <div class="mb-3 row">
-         <label for="option" class="col-sm-2 col-form-label fw-bold">Option C</label>
-         <div class="col-sm-10">
-            <input type="text" class="form-control" id="option" name="option3" required>
-         </div>
-      </div>
-      <div class="mb-3 row ">
-         <label for="option" class="col-sm-2 col-form-label fw-bold">Option D</label>
-         <div class="col-sm-10">
-            <input type="text" class="form-control" id="option" name="option4" required>
-         </div>
-      </div>
-      <div class="mb-3 row">
-         <label for="marks" class="col-sm-2 col-form-label fw-bold">Marks</label>
-         <div class="col-sm-10">
-            <input type="number" min="1" class="form-control" id="marks" name="marks" required>
-         </div>
-      </div>
-      <select class="form-select mb-3" aria-label="Default select example" name="answer" required>
-         <option value="">Select Answer</option>
-         <option value="A"> A</option>
-         <option value="B"> B</option>
-         <option value="C"> C</option>
-         <option value="D"> D</option>
-      </select>
-      <div class="mb-3 row">
-         <label for="explanantion" class="col-sm-2 col-form-label fw-bold">Explanantion</label>
-         <div class="col-sm-10">
-            <textarea class="form-control" id="explanantion" style="height: 60px;" name="explanation"></textarea>
-         </div>
-      </div>
-      <div class="p-2 d-flex flex-row-reverse" style="background-color: rgb(250,250,250);">
-         <button name="saveAdd" class="btn btn-sm btn-success px-2 mx-2" type="submit">Save and add another</button>
-         <button name="saveOnly" class="btn btn-sm btn-primary px-3 mx-2" type="submit">Save</button>
-         <a href="{% url 'allQuizzes' course.code %}" class="btn btn-sm btn-outline-danger me-auto">Cancel</a>
-      </div>
    </form>
 </div>
 </div>
