--- a/quiz/templates/quiz/allQuizzes.html
+++ b/quiz/templates/quiz/allQuizzes.html
@@ -54,12 +54,15 @@
       <table class="table my-3 text-center" style="white-space: nowrap;">
          <thead class="table-dark">
             <tr>
-               <th scope="col">SL</th>
+               <th scope="col"></th>
                <th scope="col">Quiz</th>
                <th scope="col">Starts</th>
                <th scope="col">Ends</th>
                <th scope="col">Questions</th>
+               <th scope="col"></th>
                <th scope="col">Action</th>
+               <th scope="col"></th>
+               <th scope="col"></th>
                <th></th>
             </tr>
          </thead>
@@ -83,7 +86,9 @@
 
       
                </td>
+               
                <td><a type="submit"class="btn btn-sm btn-primary" href="{% url 'deleteQuiz' course.code quiz.id %}"> Delete Quiz</a></td>
+               <td><a type="submit"class="btn btn-sm btn-primary" href="{% url 'editQuiz' course.code quiz.id %}"> Edit Quiz</a></td>
             </tr>
             {% endfor %}
          </tbody>
