--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -33,45 +33,37 @@
    </div>
    <!-- navigation links end -->
 </div>
-<div class="container d-flex justify-content-center mt-3" id="form">
-   <div class="border shadow-sm border-light rounded pb-4 px-3 col-lg-8 col-sm-12 mt-3">
-      <span class="fw-bold fs-5 d-flex justify-content-center my-3">
-      Create Quiz
-      </span>
-      <form action="{% url 'quiz' course.code %}" method="POST">
-         {% csrf_token %}
-         <div class="mb-3 mt-3 fw-bold">
-            <label for="title" class="form-label">Quiz Title</label>
-            <input type="text" class="form-control" id="title" name='title' required>
-         </div>
-         <div class="mb-3 fw-bold">
-            <label for="Instructions" class="form-label">Instructions</label>
-            <textarea class="form-control" id="Instructions" name="description"></textarea>
-         </div>
-         <div class="mb-3 fw-bold">
-            <label for="start" class="form-label">Start</label>
-            <input type="datetime-local" class="form-control" id="start" name="start" required>
-         </div>
-         <div class="mb-3 fw-bold">
-            <label for="end" class="form-label">End</label>
-            <input type="datetime-local" class="form-control" id="end" name="end" required>
-         </div>
-         <div class="form-check mb-3">
-            <input class="form-check-input" type="checkbox" value="" id="checkbox" name="checkbox">
-            <label class="form-check-label" for="checkbox">
-            Publish grade after submission
-            </label>
-         </div>
-         <div class="d-flex justify-content-end p-2 border" style="background-color: rgb(250,250,250);">
-            <button type="submit" class="btn btn-sm btn-primary mx-2">Proceed</button>
-            <a href="{% url 'allQuizzes' course.code %}" type="button" class="btn btn-sm btn-danger">Discard</a>
-         </div>
-      </form>
+<div class="container">
+   <div class="row justify-content-center">
+      <div class="col-sm-12 col-lg-8 shadow-lg rounded p-4">
+               <div class="text-center">
+                  <div class="fw-bold text-start mb-3">Update course material</div>
+                  <div class="form-group">
+                     <form action="" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <div class="mb-3">
+                           {{ field.label_tag }}
+                           {{ field }}
+                           <span style="color:green">{{ field.errors }}</span>
+                        </div>
+                        {% endfor %}
+                        <p class="fw-bold" id="fileError"></p>
+                        <!-- submit button -->
+                        <div class="d-flex justify-content-end bg-light border p-2 rounded">
+                           <a class="btn btn-sm btn-outline-danger mx-2" href="{% url 'faculty' course.code %}">Cancel</a>
+                           <button class="btn btn-sm btn-primary" type="submit" id="submit"> <span class="mx-2">Add</span></button>
+                        </div>
+                     </form>
+                  </div>
+               </div>
+      </div>
    </div>
 </div>
 </div>
+
 <script>
-   //change value of checkbox if checked
+  
    $('#checkbox').change(function() {
        if ($(this).is(":checked")) {
            $('#checkbox').val("True");
@@ -79,7 +71,7 @@
            $('#checkbox').val("False");
        }
    });
-   // check if end date is after start date
+   
    $('#form').on('submit', function(e) {
        var start = $('#start').val();
        var end = $('#end').val();
