--- a/templates/index_student.html
+++ b/templates/index_student.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -9,15 +8,15 @@
       <title>{% block title %}{% endblock title %}</title>
       <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/icon/resized_logo.png' %}">
 
-
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
      <link rel="stylesheet" href="{% static 'styles/bootstrap-select.min.css' %}">
      <link rel="stylesheet" href="{% static 'styles/nav_style.css' %}">
      <link rel="stylesheet" href="{% static 'styles/all.min.css' %}">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/solid.min.js" integrity="sha512-F0Gp9qi8/3qyo+62Pi1ZgGe6hAUxPbzOnqhhpJYAMUGDmOys95dCRCVYfQawlUeoGp1Rj/K9V7NboA9sQ9BtKw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+     
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+     
      {{ form.media }}
    </head>
    <body>
@@ -94,11 +93,13 @@
                             <a class="nav-link" href="#" role="button" data-toggle="dropdown">
                                 <i class="fas fa-caret-down"></i>
                                 </a>
-                                <div class="dropdown-menu dropdown-menu-right">                       
+                                <div class="dropdown-menu dropdown-menu-right">
+                                                                    
                                     <a href="{% url 'std_logout' %}" type="text" class="dropdown-item ai-icon" > 
                                         <i class="fas fa-sign-out-alt"></i>
                                         <span class="nav-text"> Log-out</span>
                                         </a>
+        
         
         
         
@@ -129,6 +130,12 @@
                            
                         </a></li>
 
+
+
+
+                    
+        
+        
         
                 </ul>
         
@@ -149,6 +156,8 @@
       <script src="{% static 'js/custom.min.js' %}"></script>
       <script src="{% static 'js/dashboard/dashboard-2.js' %}"></script>
       <link rel="stylesheet" href="{% static 'js/all.min.js' %}">
+
+      
 
    </body>
 </html>
