--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -8,7 +8,7 @@
       <title>Log in</title>
       <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/icon/resized_logo.png' %}">
       <link rel="manifest" href="{% static 'images/icon/site.webmanifest' %}">
-      <link rel="stylesheet" href="{% static 'styles/login.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'styles/Login.css' %}">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    </head>
@@ -105,7 +105,7 @@
 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <script src=" {% static 'js/bootstrap.bundle.min.js' %} "></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+      
       </script>
       <script>
          if (window.history.replaceState) {
